--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="container header-content">
-      <img src="https://via.placeholder.com/80" alt="Your Profile Picture" class="profile-pic" id="profilePic"/>
+      <img src="IMG-20251122-WA0004.jpg" alt="Your Profile Picture" class="profile-pic" id="profilePic"/>
       <div class="linkedin-section">
         <span>You can also connect with me via</span>
         <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
