--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Arise and Build Retreat </title>
-  <link rel="stylesheet" href="styles.css"/>
+  <title>Christians Tech Retreat </title>
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
@@ -21,12 +21,18 @@
   </header>
 
   <main class="container">
-    <h1 class="title">Arise and Build Retreat</h1>
+    <!-- Main Title -->
+    <h1 class="title">Christians Tech Retreat</h1>
+
+    <!-- New Subtitle -->
+    <div class="subtitle">
+      Registration: <strong>100% Free and Compulsory</strong>
+    </div>
 
     <!-- Retreat Flyer -->
     <div class="flyer-container">
-      <img src="https://via.placeholder.com/800x1000/003366/ffffff?text=Arise+and+Build+Retreat+Flyer" 
-           alt="Arise and Build Retreat Flyer" 
+      <img src="https://via.placeholder.com/800x1000/0A2647/ffffff?text=Christians+Tech+Retreat+Flyer" 
+           alt="Christians Tech Retreat Flyer" 
            class="flyer"/>
     </div>
 
@@ -73,10 +79,10 @@
     </section>
   </main>
 
-  <!-- Success Message Modal -->
+  <!-- Success Modal -->
   <div id="successModal" class="modal hidden">
     <div class="modal-content">
-      <span class="close-btn">&times;</span>
+      <span class="close-btn">×</span>
       <p id="successMessage"></p>
     </div>
   </div>
