--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Retreat Flyer -->
     <div class="flyer-container">
-      <img src="https://via.placeholder.com/800x1000/0A2647/ffffff?text=Christians+Tech+Retreat+Flyer" 
+      <img src="flyer.png" 
            alt="Christians Tech Retreat Flyer" 
            class="flyer"/>
     </div>
