--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Christians Tech Retreat </title>
+  <title>Christians Tech Retreat</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
   <header class="header">
     <div class="container header-content">
-      <img src="IMG-20251122-WA0004.jpg" alt="Your Profile Picture" class="profile-pic" id="profilePic"/>
+      <!-- Profile Picture + Name -->
+      <div class="profile-section">
+        <img src="IMG-20251122-WA0004.jpg" alt="Temitope Oladokun" class="profile-pic"/>
+        <h3 class="host-name">Temitope Oladokun</h3>
+      </div>
+
+      <!-- LinkedIn Section -->
       <div class="linkedin-section">
         <span>You can also connect with me via</span>
         <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
@@ -24,7 +30,7 @@
     <!-- Main Title -->
     <h1 class="title">Christians Tech Retreat</h1>
 
-    <!-- New Subtitle -->
+    <!-- Subtitle -->
     <div class="subtitle">
       Registration: <strong>100% Free and Compulsory</strong>
     </div>
