--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- LinkedIn Section -->
       <div class="linkedin-section">
         <span>You can also connect with me via</span>
-        <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/temitopeoladokun/" target="_blank" aria-label="LinkedIn">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
       </div>
