--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
    <!-- Registration Form -->
 <section class="form-section">
-  <h2>Register Your Interest</h2>
+  <h2>Kindly Fill The Below Form To Register</h2>
   <form id="registrationForm">
     <div class="form-group">
       <label for="fullName">Full Name <span class="required">*</span></label>
