--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- Profile Picture + Name -->
       <div class="profile-section">
         <img src="IMG-20251122-WA0004.jpg" alt="Temitope Oladokun" class="profile-pic"/>
-        <h3 class="host-name">Temitope Oladokun</h3>
+        <h3 class="host-name">Tèmítọ́pẹ́ Ọládòkun</h3>
       </div>
 
       <!-- LinkedIn Section -->
