--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
   <div id="successModal" class="modal hidden">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <p id="successMessage"></p>
+      <div id="successMessage">
+        <p>Thank You for Registering!</p>
+        <p>We Have Responded to You Via Email</p>
+      </div>
     </div>
   </div>
 
