--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <div class="modal-content">
       <span class="close-btn">×</span>
       <div id="successMessage">
-        <p>Thank You for Registering!</p>
-        <p>We Have Responded to You Via Email</p>
+        <p style="font-size:1.50rem;">Thank You for Registering!</p>
+        <p style="font-size:1.50rem;">We Have Responded to You Via Email</p>
       </div>
     </div>
   </div>
