--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <section class="form-section">
-      <h2>Register Now</h2>
+      <h2>Kindly Fill The Form To Register</h2>
       <form id="registrationForm" novalidate>
         <div class="form-group">
           <label>Full Name <span class="required">*</span></label>
@@ -128,7 +128,7 @@
           <label>Email Address <span class="required">*</span></label>
           <input type="email" id="email" required autocomplete="email">
         </div>
-        <button type="submit" id="submitBtn" class="submit-btn">Register Now</button>
+        <button type="submit" id="submitBtn" class="submit-btn">Submit</button>
       </form>
     </section>
   </main>
