--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 
   <main class="container">
     <h1 class="title">Christian Tech Retreat</h1>
-    <div class="subtitle">Registration: <strong>100% Free & Compulsory</strong></div>
+    <div class="subtitle"> <strong>Registration: 100% Free & Compulsory</strong></div>
 
     <div class="flyer-container">
       <img src="flyer.png" alt="Retreat Flyer" class="flyer">
     </div>
 
     <section class="form-section">
-      <h2>Register Now</h2>
+      <h4 style="font-size:1.2rem">Kindly Fill The Below Form</h2>
       <form id="registrationForm" novalidate>
         <div class="form-group">
           <label>Full Name <span class="required">*</span></label>
