--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <section class="form-section">
-      <h4 style="font-size:1.2rem">Kindly Fill The Below Form</h2>
+      <h4 style="font-size:0.7rem; margin-bottom:20px; margin-top:10px; text-align:centre;">Kindly Fill The Below Form</h2>
       <form id="registrationForm" novalidate>
         <div class="form-group">
           <label>Full Name <span class="required">*</span></label>
